同步表结构到src目录下

--- a/code/XLORM/src/main/resources/db.properties
+++ b/code/XLORM/src/main/resources/db.properties
@@ -7,5 +7,5 @@ datasource.dbtype=mysql
 
 
 # orm configuration
-orm.srcPath=D:\2.develop\Rick\code\XLORM\src\main\java
+orm.srcPath=D:\\2.develop\\Rick\\code\\XLORM\\src\\main\\java
 orm.poPackage=com.whoiszxl.xlorm.po
