--- a/code/XLORM/src/main/resources/db.properties
+++ b/code/XLORM/src/main/resources/db.properties
@@ -9,3 +9,4 @@ datasource.dbtype=mysql
 # orm configuration
 orm.srcPath=D:\\2.develop\\Rick\\code\\XLORM\\src\\main\\java
 orm.poPackage=com.whoiszxl.xlorm.po
+orm.queryClass=com.whoiszxl.xlorm.core.MySQLQuery
