--- a/code/XLORM/src/main/resources/db.properties
+++ b/code/XLORM/src/main/resources/db.properties
@@ -10,3 +10,6 @@ datasource.dbtype=mysql
 orm.srcPath=D:\\2.develop\\Rick\\code\\XLORM\\src\\main\\java
 orm.poPackage=com.whoiszxl.xlorm.po
 orm.queryClass=com.whoiszxl.xlorm.core.MySQLQuery
+
+pool.maxSize=100
+pool.minSize=10
