--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/pom.xml
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/pom.xml
@@ -56,6 +56,19 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
+		
+		<!-- jdbc依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.21</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
