--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
@@ -1,1 +1,6 @@
 server.port=8081
+
+spring.datasource.url=jdbc:mysql://whoiszxl.com:3306/xl_orm?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=xl_orm
+spring.datasource.password=xl_orm
+spring.datasource.driver-class=com.mysql.jdbc.Driver
