使用jpa操作数据库

--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
@@ -4,3 +4,10 @@ spring.datasource.url=jdbc:mysql://whoiszxl.com:3306/xl_orm?useUnicode=true&char
 spring.datasource.username=xl_orm
 spring.datasource.password=xl_orm
 spring.datasource.driver-class=com.mysql.jdbc.Driver
+
+# create: load hibernate will delete all table,and create table by your current model.
+# create-drop: every load hibernate time will create table by your current model,but sessionFactory close will delete table
+# update: first load hibernate will create table,next load hibernate will update table
+# validate: every load hibernate,validate table struct,only compare with table,not create table,will insert.
+spring.jpa.properties.hibernate.hbm2dll.auto=update
+
