--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/pom.xml
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/pom.xml
@@ -69,6 +69,12 @@
 			<version>5.1.21</version>
 		</dependency>
 		
+		<!-- spring-data-jpa依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
