--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
@@ -11,3 +11,15 @@ spring.datasource.driver-class=com.mysql.jdbc.Driver
 # validate: every load hibernate,validate table struct,only compare with table,not create table,will insert.
 spring.jpa.properties.hibernate.hbm2dll.auto=update
 
+
+
+# config more datasource
+spring.datasource.primary.url=jdbc:mysql://whoiszxl.com:3306/xl_orm?useUnicode=true&characterEncoding=utf-8
+spring.datasource.primary.username=xl_orm
+spring.datasource.primary.password=xl_orm
+spring.datasource.primary.driver-class=com.mysql.jdbc.Driver
+
+spring.datasource.secondary.url=jdbc:mysql://swoole.whoiszxl.com:3306/swoole?useUnicode=true&characterEncoding=utf-8
+spring.datasource.secondary.username=swoole
+spring.datasource.secondary.password=swoole
+spring.datasource.secondary.driver-class=com.mysql.jdbc.Driver
