--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/pom.xml
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/pom.xml
@@ -75,6 +75,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		
+		<!-- mybatis配置 -->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
