--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
@@ -23,3 +23,15 @@ spring.datasource.secondary.url=jdbc:mysql://swoole.whoiszxl.com:3306/swoole?use
 spring.datasource.secondary.username=swoole
 spring.datasource.secondary.password=swoole
 spring.datasource.secondary.driver-class=com.mysql.jdbc.Driver
+
+# config redis
+spring.redis.datasource=0
+spring.redis.host=whoiszxl.com
+spring.redis.port=6379
+spring.redis.password=669731945
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.timeout=0
+
