--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
@@ -35,3 +35,7 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 spring.redis.timeout=0
 
+
+# mongodb connection
+spring.data.mongodb.uri=mongodb://root:whoiszxl@whoiszxl.com:27017/apple
+
