--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/application-dev.properties
@@ -37,5 +37,5 @@ spring.redis.timeout=0
 
 
 # mongodb connection
-spring.data.mongodb.uri=mongodb://root:whoiszxl@whoiszxl.com:27017/apple
+#spring.data.mongodb.uri=mongodb://apple:apple@whoiszxl.com:27017/apple
 
