配置日志写入mongodb

--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/pom.xml
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/pom.xml
@@ -95,10 +95,16 @@
 		</dependency>
 		
 		<!-- 连接mongodb -->
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency> -->
+		</dependency>
+		
+		<!-- 连接mongodb存储日志,AOP依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 		
 		<!-- log4j日志 -->
 		<dependency>
