--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/log4j.properties
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot/src/main/resources/log4j.properties
@@ -22,3 +22,12 @@ log4j.appender.E.Append = true
 log4j.appender.E.Threshold = ERROR 
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+
+
+### config mongodb save log ###
+log4j.logger.mongodb=INFO, mongodb
+
+log4j.appender.mongodb=com.whoiszxl.log.MongoAppender
+log4j.appender.mongodb.connectionUrl=mongodb://whoiszxl.com:27017/apple
+log4j.appender.mongodb.databaseName=apple
+log4j.appender.mongodb.collectionName=sb_log
