--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot-2/pom.xml
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot-2/pom.xml
@@ -58,9 +58,15 @@
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
 		
-		<dependency>
+		<!-- <dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
+		</dependency> -->
+		
+		<!-- 使用redis做缓存依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 		
 	</dependencies>
