--- a/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot-2/src/main/resources/application.properties
+++ b/中小型后台服务架构和运维架构/project_code/whoiszxl-springboot-2/src/main/resources/application.properties
@@ -24,3 +24,15 @@ spring.redis.pool.max-wait=-1
 spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 spring.redis.timeout=0
+
+
+# email
+spring.mail.host=smtp.qq.com
+spring.mail.username=619563988
+spring.mail.password=123qwe!@#
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+
+
