--- a/Guns后台管理系统超快速搭建/code/guns/guns-admin/src/main/resources/application.yml
+++ b/Guns后台管理系统超快速搭建/code/guns/guns-admin/src/main/resources/application.yml
@@ -77,9 +77,9 @@ mybatis-plus:
 spring:
   profiles: dev
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/guns?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
-    username: root
-    password: root
+    url: jdbc:mysql://whoiszxl.com:3306/guns?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    username: guns
+    password: guns
     db-name: guns
     filters: log4j,wall,mergeStat
 
@@ -87,14 +87,14 @@ spring:
 guns:
   flowable:
     datasource:
-      url: jdbc:mysql://127.0.0.1:3306/guns_flowable?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
-      username: root
-      password: root
+      url: jdbc:mysql://whoiszxl.com:3306/guns_flowable?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+      username: guns_flowable
+      password: guns_flowable
   muti-datasource:
     default-dataSource-name: dataSourceGuns #默认的数据源名称
-    url: jdbc:mysql://127.0.0.1:3306/guns_flowable?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
-    username: root
-    password: root
+    url: jdbc:mysql://whoiszxl.com:3306/guns_flowable?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    username: guns_flowable
+    password: guns_flowable
 
 logging:
   level.root: info
