--- a/SpringCloud微服务/code/eureka/src/main/resources/application.yml
+++ b/SpringCloud微服务/code/eureka/src/main/resources/application.yml
@@ -3,6 +3,11 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
     register-with-eureka: false
+  server:
+    enable-self-preservation: false #是否开启保护模式 ,生产环境不能这么搞
+  
 spring:
   application:
     name: eureka
+server:
+  port: 8761
