--- a/SpringCloud微服务/code/client/src/main/resources/application.yml
+++ b/SpringCloud微服务/code/client/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
 #  instance:
 #    hostname: clientName 设置访问ip的别名
       
