--- a/SpringCloud微服务/code/eureka/src/main/resources/application.yml
+++ b/SpringCloud微服务/code/eureka/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8762/eureka/
     register-with-eureka: false
   server:
     enable-self-preservation: false #是否开启保护模式 ,生产环境不能这么搞
@@ -9,5 +9,5 @@ eureka:
 spring:
   application:
     name: eureka
-server:
-  port: 8761
+#server:
+#  port: 8761
