金融项目:初始子模块项目

--- a/金融系统/project_code/financial/pom.xml
+++ b/金融系统/project_code/financial/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.whoiszxl</groupId>
 	<artifactId>financial</artifactId>
 	<version>1.0.0</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 	<name>financial</name>
 	<description>financial</description>
